--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,7 @@ input[type=checkbox].css-checkbox {
     font-size: 16px;
     font-weight: 400;
     margin: 0;
+    padding-left: 50px;
 }
 
 .menu-content {
