--- a/view/form/_all.html
+++ b/view/form/_all.html
@@ -127,7 +127,7 @@
     <label class="item item-checkbox all-padding-leftright" ng-repeat="box in data.option_designs">
         <span class=""
               >{{box.name}}</span>
-        <span class="checkbox all-checkbox" style="width: 35px">
+        <span class="checkbox all-checkbox">
             <input input id="{{hash}}" type="checkbox" name="{{box.name}}" ng-model="box.value"
                    value="1" ng-required="data.required">
         </span>
@@ -162,8 +162,8 @@
                ng-model="data.value" value="{{data.default_value}}" placeholder="{{data.placeholder}}"
                ng-required="data.required">-->
 
-    <div ng-required="data.required" ion-datetime-picker date ng-model="data.value" style="padding-left: 15px;padding-right: 15px;border-top-left-radius: 0px;border-top-right-radius: 0px;overflow: hidden;height: 46px;padding-top: 12px;font-size: 14px;color: #000;background-color: #fff;">
-        {{data.value| date: "dd-MM-yyyy"}}
+    <div ng-required="data.required" ion-datetime-picker date ng-model="data.value" style="border-top-left-radius: 0px;border-top-right-radius: 0px;overflow: hidden;height: 46px;font-size: 14px;color: #000;background-color: #fff;">
+        <input date='dd-MM-yyyy' ng-model="data.value" style='padding: 15px;'>
     </div>
 
 
@@ -182,8 +182,9 @@
                ng-model="data.value" value="{{data.default_value}}" placeholder="{{data.placeholder}}"
                ng-required="data.required">-->
 
-    <div ng-required="data.required" ion-datetime-picker time ng-model="data.value" style="padding-left: 15px;padding-right: 15px;border-top-left-radius: 0px;border-top-right-radius: 0px;overflow: hidden;height: 46px;padding-top: 12px;font-size: 14px;color: #000;background-color: #fff;">
-        {{data.value| date: "H:mm"}}
+    <div ng-required="data.required" ion-datetime-picker time ng-model="data.value" style="border-top-left-radius: 0px;border-top-right-radius: 0px;overflow: hidden;height: 46px;font-size: 14px;color: #000;background-color: #fff;">
+        <!--        {{data.value| date: "H:mm"}}-->
+        <input date='HH:mm' ng-model="data.value" style='padding: 15px;'>
     </div>
 
 </div>
