--- a/view/form/_photos.html
+++ b/view/form/_photos.html
@@ -44,20 +44,20 @@
     </a>
     <!--<div ng-if="imgURI.length !== 1 || imgURI[0].base64String">-->
     <div style="padding-bottom: 80px">
-        <img ng-show="filter.picture.base64String !== ''" data-ng-src ="data:image/png;base64,{{filter.picture.base64String}}" style="width:100%">
+        <img ng-show="filter.picture.base64String !== ''" data-ng-src ="data:image/png;base64,{{filter.picture.base64String}}" style="width:100%;-webkit-user-drag: inherit;">
         <div class="list" style="background-color:#fff;">
             <label class="item item-input item-stacked-label white-placeholder" style="background-color: #11C1F3">
                 <span class="input-label" style="padding:10px 15px 0px ;">Title</span>
                 <input type="text" style="background-color: #11C1F3; color:#fff;" ng-model="filter.picture.title">
             </label>
             <label class="item item-input item-stacked-label" style="border-bottom: 1px solid #efefef">
-                <span class="input-label" style="color: #121d21 ; padding:10px 15px 0px ;" ng-model="filter.picture.tags">Tags</span>
-                <textarea ng-auto-expand></textarea>
+                <span class="input-label" style="color: #121d21 ; padding:10px 15px 0px ;" >Tags</span>
+                <textarea ng-auto-expand ng-model="filter.picture.tags"></textarea>
             </label>
             <hr>
             <label class="item item-input item-stacked-label" style="border-bottom: 1px solid #aaa">
-                <span class="input-label" style="color: #121d21; padding:10px 15px 0px ;" ng-model="filter.picture.comment">Comments</span>
-                <textarea ng-auto-expand></textarea>
+                <span class="input-label" style="color: #121d21; padding:10px 15px 0px ;" >Comments</span>
+                <textarea ng-auto-expand ng-model="filter.picture.comment"></textarea>
             </label>
         </div>
     </div>
