--- a/css/category.css
+++ b/css/category.css
@@ -351,3 +351,25 @@ input[type='text']:focus,input[type='email']:focus,input[type='number']:focus, t
     border-left: 3px solid #ef473a;
     padding-left: 12px !important;
 }
+.popover-backdrop.active {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.customPopup{
+    top: 10px !important;
+    left: 15px !important;
+    width: calc(100% - 30px);
+    height: calc(100% - 40px);
+}
+.customPopup .bar-subheader{
+    padding:0px;
+}
+.customPopup .item-input-wrapper input:focus{
+    border-left: none;
+    padding-left:15px !important;
+}
+.customPopup .list{
+    top: 44px;
+}
+.customPopup .popover-arrow{
+    display: none;
+}
