--- a/view/form/_payitem.html
+++ b/view/form/_payitem.html
@@ -128,7 +128,8 @@
 </div>
 <!--=================================================subtasks=============================================================-->
 <div class="list" ng-if="filter.substate && filter.substateStk && !filter.substateRes && !filter.substateStkRes">
-    <a class="item item-button-left subHeader-form-bar" ng-click="filter.substateStk = null;goToTop()">
+    <a class="item item-button-left subHeader-form-bar" ng-click="filter.substateStk = null;
+        goToTop()">
         <div class="back-arrow ion-ios-arrow-left"></div>
         <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
             <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Resource</span> <span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle" ng-if="filter.edit">Save</span><span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle" ng-if="!filter.edit">Back</span></div>
@@ -162,7 +163,8 @@
 
                     <ion-list show-delete="data.showDelete">
                         <ion-item ng-repeat="stkres in filter.substateStk.resources" item="stkres" class="item-remove-animate" ng-click="filter.substateStkRes = stkres;
-                                filter.actionBtnShow = false;goToTop()">
+                                filter.actionBtnShow = false;
+                                goToTop()">
                             <span ng-if="!stkres.name">Resource {{$index + 1}}</span>
                             <span ng-if="stkres.name">{{stkres.name}}</span>
                             <ion-option-button class="button-assertive" ng-click="deleteElement(filter.substateStk.resources, stkres)" ng-if="filter.edit">
@@ -183,7 +185,8 @@
 </div>
 <div class="list" ng-if="filter.substate && filter.substateStk && !filter.substateRes && filter.substateStkRes">
     <a class="item item-button-left subHeader-form-bar" ng-click="filter.substateStkRes = null;
-        filter.actionBtnShow = true;goToTop()">
+        filter.actionBtnShow = true;
+        goToTop()">
         <div class="back-arrow ion-ios-arrow-left"></div>
         <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
             <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Resource</span> <span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle" ng-if="filter.edit">Save</span><span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle" ng-if="!filter.edit">Back</span></div>
@@ -202,12 +205,17 @@
             <div class="formContent">               
                 <div class="calm-border">
                     <div class="calm-border">
-                        <label class="item item-input item-stacked-label calm-border">
+                        <div class="item item-input item-stacked-label calm-border">
                             <div class="inputLabel" style="padding-top: 10px;">
                                 <span class="all-name">Name</span>
-                            </div>                                    
-                            <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substateStkRes.name" ng-disabled="!filter.edit">
-                        </label>
+                            </div>         
+                            <div style="position: relative">
+                                <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substateStkRes.name" ng-disabled="!filter.edit">
+                                <span ng-if="filter.edit" class="ion ion-android-search" ng-click="openPopover($event, filter.substateStkRes);
+                                    $event.stopPropagation();" style="position: absolute;top: 0px;right: 0px;font-size: 25px;color: #31475a; padding: 10px 5px 10px 15px;"></span>
+                            </div>
+                            <!--<input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substateStkRes.name" ng-disabled="!filter.edit">-->
+                        </div>
                         <label class="item item-input item-stacked-label calm-border">
                             <div class="inputLabel" style="padding-top: 10px;">
                                 <span class="all-name">Product ref</span>
@@ -294,7 +302,8 @@
 </div>
 <div class="list" ng-if="filter.substate && !filter.substateStk && filter.substateRes && !filter.substateStkRes">
     <a class="item item-button-left subHeader-form-bar" ng-click="filter.substateRes = null;
-        filter.actionBtnShow = true;goToTop()">
+        filter.actionBtnShow = true;
+        goToTop()">
         <div class="back-arrow ion-ios-arrow-left"></div>
         <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
             <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Resource</span><span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle" ng-if="filter.edit">Save</span><span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle" ng-if="!filter.edit">Back</span></div>
@@ -312,12 +321,17 @@
             <div class="blue-dropArrow"></div>
             <div class="formContent">               
                 <div class="calm-border">
-                    <label class="item item-input item-stacked-label calm-border">
+                    <div class="item item-input item-stacked-label calm-border">
                         <div class="inputLabel" style="padding-top: 10px;">
                             <span class="all-name">Name</span>
                         </div>                                    
-                        <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substateRes.name" ng-disabled="!filter.edit">
-                    </label>
+                        <!--<input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substateRes.name" ng-disabled="!filter.edit">-->
+                        <div style="position: relative">
+                            <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substateRes.name" ng-disabled="!filter.edit">
+                            <span ng-if="filter.edit" class="ion ion-android-search" ng-click="openPopover($event, filter.substateRes);
+                                $event.stopPropagation();" style="position: absolute;top: 0px;right: 0px;font-size: 25px;color: #31475a; padding: 10px 5px 10px 15px;"></span>
+                        </div>
+                    </div>
                     <label class="item item-input item-stacked-label calm-border">
                         <div class="inputLabel" style="padding-top: 10px;">
                             <span class="all-name">Product ref</span>
