--- a/view/form/_staff.html
+++ b/view/form/_staff.html
@@ -1,13 +1,15 @@
 <div class="list" ng-if="!filter.substate">
     <a class="item item-button-left subHeader-form-bar" ng-click="filter.state = 'form';
-        filter.actionBtnShow = false;goToTop()">
+        filter.actionBtnShow = false;
+        goToTop()">
         <div class="back-arrow ion-ios-arrow-left"></div>
         <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
             <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Resource</span> <span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle">Done</span></div>
     </a>
     <form class="form-new-fields">
         <ion-list show-delete="data.showDelete">
-            <ion-item ng-repeat="resource in staffField.resources" item="resource" class="item-remove-animate" ng-click="filter.substate = resource;goToTop()">
+            <ion-item ng-repeat="resource in staffField.resources" item="resource" class="item-remove-animate" ng-click="filter.substate = resource;
+                    goToTop()">
                 <span ng-if="!resource.name">Staff {{$index + 1}}</span>
                 <span ng-if="resource.name">{{resource.name}}</span>
                 <ion-option-button class="button-assertive" ng-click="deleteElement(staffField.resources, resource)" ng-if="filter.edit">
@@ -20,7 +22,8 @@
 </div>
 <div class="list" ng-if="filter.substate">
     <a class="item item-button-left subHeader-form-bar" ng-click="filter.substate = null;
-        filter.actionBtnShow = true;goToTop()">
+        filter.actionBtnShow = true;
+        goToTop()">
         <div class="back-arrow ion-ios-arrow-left"></div>
         <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
             <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Resource</span> <span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle">Save</span></div>
@@ -38,12 +41,18 @@
             <div class="blue-dropArrow"></div>
             <div class="formContent">                
                 <div class="calm-border">
-                    <label class="item item-input item-stacked-label calm-border">
+                    <div class="item item-input item-stacked-label calm-border">
                         <div class="inputLabel" style="padding-top: 10px;">
                             <span class="all-name">Name</span>
-                        </div>                                    
-                        <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substate.name" ng-disabled="!filter.edit">
-                    </label>
+                        </div>     
+                        <div style="position: relative">
+                            <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substate.name" ng-disabled="!filter.edit">
+                            <span ng-if="filter.edit" class="ion ion-android-search" ng-click="openPopover($event, filter.substate);
+                                $event.stopPropagation();" style="position: absolute;top: 0px;right: 0px;font-size: 25px;color: #31475a; padding: 10px 5px 10px 15px;"></span>
+                        </div>
+                        <!--<input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substate.name" ng-disabled="!filter.edit">-->
+                    </div>
+
                 </div>                
                 <div class="calm-border">
                     <label class="item item-input item-stacked-label calm-border">
