--- a/view/form.html
+++ b/view/form.html
@@ -7,7 +7,7 @@
                     <div class="back-arrow ion-ios-arrow-left"></div>
                     <div class="header-prj-text">{{formData.category}}</div>
                 </a>
-                <div class="formTitle clearfix" style="float:none" ng-click="openPopover($event)">
+                <div class="formTitle clearfix" style="float:none">
                     <div class="header-prj-text"> Design: {{formData.name}}</div>
                     <div class="blue-label">{{formData.code}}</div>
                 </div>
