--- a/view/form/_resource.html
+++ b/view/form/_resource.html
@@ -73,7 +73,8 @@
                         </div>                               
                         <div style="position: relative">
                             <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substate.name" ng-disabled="!filter.edit">
-                            <span ng-if="filter.edit" class="ion ion-android-search" ng-click="openPopover($event, filter.substate); $event.stopPropagation();" style="position: absolute;top: 0px;right: 0px;font-size: 25px;color: #31475a; padding: 10px 5px 10px 15px;"></span>
+                            <span ng-if="filter.edit" class="ion ion-android-search" ng-click="openPopover($event, filter.substate);
+                                $event.stopPropagation();" style="position: absolute;top: 0px;right: 0px;font-size: 25px;color: #31475a; padding: 10px 5px 10px 15px;"></span>
                         </div>
                     </div>
                 </div>
