--- a/view/form/_payitem.html
+++ b/view/form/_payitem.html
@@ -25,7 +25,10 @@
         <div class="item item-total">
             Total
             <div>
-                {{resourceField.total_cost}}
+                {{payitemField.total_cost}}
+                <i ng-if="custSett">
+                    <i ng-if="custSett.currency === 'pound'">£</i><i ng-if="custSett.currency === 'dolar'">$</i><i ng-if="custSett.currency === 'euro'">€</i>
+                </i>
             </div>
         </div> 
     </form>
@@ -33,6 +36,7 @@
 <!--=======================================pay-item edit===================================================================-->
 <div class="list" ng-if="filter.substate && !filter.substateStk && !filter.substateRes && !filter.substateStkRes">
     <a class="item item-button-left subHeader-form-bar" ng-click="filter.substate = null;
+        doTotal('pi', payitemField);
         goToTop()">
         <div class="back-arrow ion-ios-arrow-left"></div>
         <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
@@ -83,16 +87,6 @@
                     </label>
                 </div> 
                 <div class="form-new-fields"  style="margin-top:10px;">
-                    <!--                    <div class="item" ng-repeat="stk in filter.substate.subtasks" ng-click="filter.substateStk = stk" ng-if="filter.substate.subtasks.length !== 0">
-                                            <span ng-if="!stk.description">Subtask {{$index + 1}}</span>
-                                            <span ng-if="stk.description">{{stk.description}}</span>
-                                        </div>    -->
-
-                    <!--                    <div class="item" ng-repeat="res in filter.substate.resources" ng-click="filter.actionBtnShow = false;
-                                                filter.substateRes = res;" ng-if="filter.substate.resource.length !== 0">
-                                            <span ng-if="!res.name">Resource {{$index + 1}}</span>
-                                            <span ng-if="res.name">{{res.name}}</span>
-                                        </div>  -->
                     <ion-list show-delete="data.showDelete" ng-if="filter.substate.subtasks.length !== 0">
                         <ion-item ng-repeat="stk in filter.substate.subtasks" item="stk" class="item-remove-animate" ng-click="filter.substateStk = stk;
                                 goToTop()">
@@ -118,7 +112,10 @@
                     <div class="item item-total" ng-if="filter.substate.resources.length !== 0 || filter.substate.subtasks.length !== 0">
                         Total
                         <div>
-                            {{resourceField.total_cost}}
+                            {{filter.substate.total_cost}}
+                            <i ng-if="custSett">
+                                <i ng-if="custSett.currency === 'pound'">£</i><i ng-if="custSett.currency === 'dolar'">$</i><i ng-if="custSett.currency === 'euro'">€</i>
+                            </i>
                         </div>
                     </div> 
                 </div>
@@ -129,6 +126,7 @@
 <!--=================================================subtasks=============================================================-->
 <div class="list" ng-if="filter.substate && filter.substateStk && !filter.substateRes && !filter.substateStkRes">
     <a class="item item-button-left subHeader-form-bar" ng-click="filter.substateStk = null;
+        doTotal('pisubtask', filter.substate);
         goToTop()">
         <div class="back-arrow ion-ios-arrow-left"></div>
         <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
@@ -155,12 +153,6 @@
                     </label>
                 </div>                
                 <div class="form-new-fields" ng-if="filter.substateStk.resources.length !== 0" style="margin-top:10px;">
-                    <!--                    <div class="item" ng-repeat="stkres in filter.substateStk.resources" ng-click="filter.substateStkRes = stkres;
-                                                filter.actionBtnShow = false">
-                                            <span ng-if="!stkres.name">Resource {{$index + 1}}</span>
-                                            <span ng-if="stkres.name">{{stkres.name}}</span>
-                                        </div>    -->
-
                     <ion-list show-delete="data.showDelete">
                         <ion-item ng-repeat="stkres in filter.substateStk.resources" item="stkres" class="item-remove-animate" ng-click="filter.substateStkRes = stkres;
                                 filter.actionBtnShow = false;
@@ -175,7 +167,10 @@
                     <div class="item item-total">
                         Total
                         <div>
-                            {{resourceField.total_cost}}
+                            {{filter.substateStk.total_cost}}
+                            <i ng-if="custSett">
+                                <i ng-if="custSett.currency === 'pound'">£</i><i ng-if="custSett.currency === 'dolar'">$</i><i ng-if="custSett.currency === 'euro'">€</i>
+                            </i>
                         </div>
                     </div> 
                 </div>
@@ -186,6 +181,7 @@
 <div class="list" ng-if="filter.substate && filter.substateStk && !filter.substateRes && filter.substateStkRes">
     <a class="item item-button-left subHeader-form-bar" ng-click="filter.substateStkRes = null;
         filter.actionBtnShow = true;
+        doTotal('pisubresource', filter.substateStk);
         goToTop()">
         <div class="back-arrow ion-ios-arrow-left"></div>
         <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
@@ -303,7 +299,8 @@
 <div class="list" ng-if="filter.substate && !filter.substateStk && filter.substateRes && !filter.substateStkRes">
     <a class="item item-button-left subHeader-form-bar" ng-click="filter.substateRes = null;
         filter.actionBtnShow = true;
-        goToTop()">
+        doTotal('piresource', filter.substate);
+        goToTop();">
         <div class="back-arrow ion-ios-arrow-left"></div>
         <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
             <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Resource</span><span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle" ng-if="filter.edit">Save</span><span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle" ng-if="!filter.edit">Back</span></div>
@@ -325,7 +322,6 @@
                         <div class="inputLabel" style="padding-top: 10px;">
                             <span class="all-name">Name</span>
                         </div>                                    
-                        <!--<input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substateRes.name" ng-disabled="!filter.edit">-->
                         <div style="position: relative">
                             <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substateRes.name" ng-disabled="!filter.edit">
                             <span ng-if="filter.edit" class="ion ion-android-search" ng-click="openPopover($event, filter.substateRes);
