--- a/view/login.html
+++ b/view/login.html
@@ -10,11 +10,11 @@
             </div>
             <form class="login-form" ng-submit="login()" role="form" name="loginForm" novalidate="">
                 <div class="input-container">
-                    <input type="email" ng-model="user.username" required="required">
+                    <input type="email" ng-model="user.username" required="required"><strong></strong>
                     <label class="label-bar">Username</label>
                 </div>
                 <div class="input-container">
-                    <input type="password" ng-model="user.password" required="required">
+                    <input type="password" ng-model="user.password" required="required"><strong></strong>
                     <label class="label-bar">Password</label>
                 </div>
                 <div class="input-container">
