--- a/view/categories.html
+++ b/view/categories.html
@@ -11,7 +11,7 @@
 					<span class="defaultPrj-name">{{navTitle}}</span>
 					<br>
 					<span class="defaultPrj-id">ID:{{projectId}}</span>
-					<img class="default-check-img" src="img/new/check.png">
+					<img class="default-check-img" src="img/new/check.svg">
 				</div>
 				<ion-item ng-repeat="project in projects"
 				          class="prj-item"
