--- a/view/forms.html
+++ b/view/forms.html
@@ -25,13 +25,13 @@
     </ion-content>
     <div class="tabs tabs-calm tabs-icon-only">
         <a class="tab-item">
-            <img src="img/new/all forms.png">
+            <img src="img/new/all forms.svg">
         </a>
         <a class="tab-item" ui-sref="app.completed({projectId:projectId, categoryId:categoryId})" ui-sref-opts="{reload: true}">
-            <img src="img/new/completed forms.png">
+            <img src="img/new/completed forms.svg">
         </a>
         <a class="tab-item" ui-sref="app.registers({projectId:projectId, categoryId:categoryId})" ui-sref-opts="{reload: true}">
-            <img src="img/new/registers.png">
+            <img src="img/new/registers.svg">
         </a>                
     </div>
 
