--- a/view/menu.html
+++ b/view/menu.html
@@ -22,7 +22,7 @@
         <ion-content class="has-header dark-bg">
             <ion-item nav-clear menu-close class="dark-bg dark-border" style="color:#fff;    padding-bottom: 0px;">
                 <div class="user-circle-img">
-                    <img src="img/new/user_default.png">
+                    <img src="img/new/user_default.svg">
                 </div>
                 <div class="menu-name">{{currentUser.role_title}}</div>
                 <div class="menu-email">{{currentUser.username}}</div>
@@ -36,27 +36,27 @@
 
             <ion-item nav-clear menu-close ng-click="sync()" class="dark-bg dark-border menu-item p-10-15"
                       style="color:#fff">
-                <img src="img/new/synchronize.png">
+                <img src="img/new/synchronize.svg">
                 <span>Synchronize</span>
             </ion-item>
             <ion-item nav-clear menu-close ui-sref="app.myaccount" class="dark-bg dark-border menu-item p-10-15"
                       style="color:#fff">
-                <img src="img/new/user.png">
+                <img src="img/new/user.svg">
                 <span>My Account</span>
             </ion-item>
             <ion-item nav-clear menu-close ui-sref="app.shared" class="dark-bg dark-border menu-item p-10-15"
                       style="color:#fff">
-                <img src="img/new/sharedDocs.png">
+                <img src="img/new/sharedDocs.svg">
                 <span>My shared docs</span>
 
             </ion-item>
             <ion-item nav-clear menu-close ui-sref="app.about" class="dark-bg dark-border menu-item p-10-15">
-                <img src="img/new/about.png">
+                <img src="img/new/about.svg">
                 <span>About</span>
             </ion-item>
-            <ion-item nav-clear menu-close ng-click="goAt()"
+            <ion-item nav-clear menu-close href="" onclick="navigator.app.loadUrl('http://app.preprod.proproject.io/', {openExternal: true});"
                       class="dark-bg dark-border menu-item project-web-link">
-                <img src="img/new/onweb.png">
+                <img src="img/new/onWeb.svg">
                 <span>ProProject on web</span>
             </ion-item>
         </ion-content>
