--- a/view/menu.html
+++ b/view/menu.html
@@ -54,6 +54,10 @@
                 <img src="img/new/about.svg">
                 <span>About</span>
             </ion-item>
+            <ion-item nav-clear menu-close ng-click="force_logout()" class="dark-bg dark-border menu-item p-10-15"
+                      style="color:#fff">
+                <span>Force Logout</span>
+            </ion-item>
             <ion-item nav-clear menu-close href="" onclick="navigator.app.loadUrl('http://app.preprod.proproject.io/', {openExternal: true});"
                       class="dark-bg dark-border menu-item project-web-link">
                 <img src="img/new/onWeb.svg">
