--- a/view/completed.html
+++ b/view/completed.html
@@ -21,7 +21,7 @@
                             <div class="form-code ng-binding">{{::getFullCode(form)}}</div>
                             <ion-option-button class="button-assertive" style="background-color: #1EBDF4" ng-click="shareThis(form)">
                                 Share
-                            </ion-option-button>                
+                            </ion-option-button>
                         </ion-item>
                     </ion-list>
                     <!--                    <a class="item" ng-repeat="form in formInstances| orderBy:'-created_on'"
@@ -35,13 +35,13 @@
     </ion-content>
     <div class="tabs tabs-calm tabs-icon-only">
         <a class="tab-item" ui-sref="app.forms({projectId:projectId, categoryId:categoryId})">
-            <img src="img/new/all forms.svg">
+            <img src="img/new/all forms.png">
         </a>
         <a class="tab-item">
-            <img src="img/new/completed forms.svg">
+            <img src="img/new/completed forms.png">
         </a>
         <a class="tab-item" ui-sref="app.registers({projectId:projectId, categoryId:categoryId})">
-            <img src="img/new/registers.svg">
-        </a> 
+            <img src="img/new/registers.png">
+        </a>
     </div>
 </ion-view>
