--- a/view/menu.html
+++ b/view/menu.html
@@ -46,7 +46,7 @@
             </ion-item>
             <ion-item nav-clear menu-close href="" onclick="navigator.app.loadUrl('http://app.preprod.proproject.io/', {openExternal: true});"
                       class="dark-bg dark-border menu-item project-web-link">
-                <img src="img/new/onWeb.png">
+                <img src="img/new/onweb.png">
                 <span>ProProject on web</span>
             </ion-item>
         </ion-content>
