--- a/view/edit.html
+++ b/view/edit.html
@@ -10,7 +10,7 @@
                                    href="#/app/view/{{projectId}}/{{formData.category_id}}">
                                     <div class="back-arrow ion-ios-arrow-left"></div>
                                     <div class="header-prj-text">{{formData.category}}</div>
-                
+
                                 </a>-->
                 <div class="formTitle">
                     <div class="header-prj-text"> Form: {{formData.name}}</div>
@@ -19,7 +19,7 @@
                 <form class="form-container-bgd">
                     <ion-list>
                         <div ng-repeat="fieldset in formData.field_group_instances track by $index" fs
-                             data="fieldset" style="position: relative; margin-bottom:5px">                            
+                             data="fieldset" style="position: relative; margin-bottom:5px">
 
                             <ion-item  id="{{formData.id}}:{{$index}}"
                                        ng-click="toggleGroup(fieldset, formData.id + ':' + $index)"
@@ -30,7 +30,7 @@
                                 <span class="all-field-description">{{fieldset.guidance}}</span>
                                 <ion-option-button class="button-assertive" ng-click="repeatGroup(fieldset)" ng-if="fieldset.repeatable" style="background-color: #C8F7C5;color: #31475A;">
                                     Repeat
-                                </ion-option-button> 
+                                </ion-option-button>
                             </ion-item >
                             <div ng-class="{'blue-dropArrow':shownGroup}"></div>
                             <div class="formContent"
@@ -44,19 +44,19 @@
                         </div>
                     </ion-list>
                     <div class="item-stable item fs all-field-header" ng-if="formData.resource_field_id" >
-                        <span class="add-pic-text">Resource field</span>    
+                        <span class="add-pic-text">Resource field</span>
                         <button ng-click="goState('resource')">Open</button>
                     </div>
                     <div class="item-stable item fs all-field-header" ng-if="formData.scheduling_field_id">
-                        <span class="add-pic-text">Scheduling field</span>    
+                        <span class="add-pic-text">Scheduling field</span>
                         <button ng-click="goState('scheduling')">Open</button>
                     </div>
                     <div class="item-stable item fs all-field-header" ng-if="formData.pay_item_field_id">
-                        <span class="add-pic-text">Pay-item field</span>    
+                        <span class="add-pic-text">Pay-item field</span>
                         <button ng-click="goState('payitem')">Open</button>
                     </div>
                     <div class="item-stable item fs all-field-header" ng-if="formData.staff_field_id">
-                        <span class="add-pic-text">Staff field</span>    
+                        <span class="add-pic-text">Staff field</span>
                         <button ng-click="goState('staff')">Open</button>
                     </div>
                 </form>
@@ -64,9 +64,9 @@
                 <div class="form-container-bgd">
                     <div id="image-header" class="item-stable item fs all-field-header">
                         <span class="add-pic-text">Add pictures</span>
-                        <img ng-click="addPicture()" class="add-pic-icon mr-0" src="img/new/cameraRoll.svg">
-                        <img ng-click="takePicture()" class="add-pic-icon" src="img/new/takePicture.svg">
-                        <img ng-click="goPicture()" class="add-pic-icon" src="img/new/gallery.svg">
+                        <img ng-click="addPicture()" class="add-pic-icon mr-0" src="img/new/cameraRoll.png">
+                        <img ng-click="takePicture()" class="add-pic-icon" src="img/new/takePicture.png">
+                        <img ng-click="goPicture()" class="add-pic-icon" src="img/new/gallery.png">
                     </div>
                 </div>
                 <div class="padding">
@@ -88,24 +88,24 @@
         </div>
     </ion-content>
     <div ng-if="!filter.substateRes && !filter.substateStkRes && filter.state !== 'form' && filter.state !== 'staff' && filter.state !== 'resource' && filter.state !== 'photos' || (!filter.substate && filter.state === 'staff') || (!filter.substate && filter.state === 'resource')" >
-        <button class="btn-add-resource" ng-click="addResourcePi()" ng-if="filter.actionBtn && filter.substate.subtasks.length === 0 && filter.substate.resources.length === 0">   
+        <button class="btn-add-resource" ng-click="addResourcePi()" ng-if="filter.actionBtn && filter.substate.subtasks.length === 0 && filter.substate.resources.length === 0">
             Add resource
         </button>
-        <button class="btn-add-subtask" ng-click="addSubtask()" ng-if="filter.actionBtn && filter.substate.resources.length === 0 && filter.substate.subtasks.length === 0">   
+        <button class="btn-add-subtask" ng-click="addSubtask()" ng-if="filter.actionBtn && filter.substate.resources.length === 0 && filter.substate.subtasks.length === 0">
             Add subtask
         </button>
-        <button class="btn-add" ng-click="actionBtnPayitem();">   
-            <i class="ion-ios-plus-empty"></i>            
+        <button class="btn-add" ng-click="actionBtnPayitem();">
+            <i class="ion-ios-plus-empty"></i>
         </button>
     </div>
-    <div ng-if="filter.state === 'payitem' && (filter.substateRes || filter.substateStkRes)" >       
-        <button class="btn-add" ng-click="actionBtnCalculation();" ng-if="filter.substateRes">   
-            <i ng-if="!filter.substateRes.calculation" class="ion-ios-calculator-outline" style="font-size: 42px;margin-top: 0px;"></i>            
-            <i ng-if="filter.substateRes.calculation" class="ion-ios-calculator" style="font-size: 42px;margin-top: 0px;"></i>            
+    <div ng-if="filter.state === 'payitem' && (filter.substateRes || filter.substateStkRes)" >
+        <button class="btn-add" ng-click="actionBtnCalculation();" ng-if="filter.substateRes">
+            <i ng-if="!filter.substateRes.calculation" class="ion-ios-calculator-outline" style="font-size: 42px;margin-top: 0px;"></i>
+            <i ng-if="filter.substateRes.calculation" class="ion-ios-calculator" style="font-size: 42px;margin-top: 0px;"></i>
         </button>
-        <button class="btn-add" ng-click="actionBtnCalculation();" ng-if="filter.substateStkRes">   
-            <i ng-if="!filter.substateStkRes.calculation" class="ion-ios-calculator-outline" style="font-size: 42px;margin-top: 0px;"></i>            
-            <i ng-if="filter.substateStkRes.calculation" class="ion-ios-calculator" style="font-size: 42px;margin-top: 0px;"></i>            
+        <button class="btn-add" ng-click="actionBtnCalculation();" ng-if="filter.substateStkRes">
+            <i ng-if="!filter.substateStkRes.calculation" class="ion-ios-calculator-outline" style="font-size: 42px;margin-top: 0px;"></i>
+            <i ng-if="filter.substateStkRes.calculation" class="ion-ios-calculator" style="font-size: 42px;margin-top: 0px;"></i>
         </button>
     </div>
 </ion-view>
